--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | News homepage</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,13 +15,26 @@
   </style>
 </head>
 <body>
+  <header>
+    <nav>
+      <div class="logo"><img src="/assets/images/logo.svg" alt=""></div>
+      <div class="nav-btns">
+        <a href="#" class="nav-link">Home</a>
+        <a href="#" class="nav-link">New</a>
+        <a href="#" class="nav-link">Popular</a>
+        <a href="#" class="nav-link">Trending</a>
+        <a href="#" class="nav-link">Categories</a>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <div class="web-img">
 
-  Home
-  New
-  Popular
-  Trending
-  Categories
-
+    </div>
+    <div class="side">
+      <h1>New</h1>
+    </div>
+  </main>
   The Bright Future of Web 3.0?
 
   We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
@@ -54,7 +67,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Karimin</a>.
   </div>
 </body>
 </html>
