--- a/index.html
+++ b/index.html
@@ -2,22 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
-  <title>Frontend Mentor | News homepage</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>News homepage</title>
 </head>
 <body>
   <header>
     <nav>
-      <div class="logo"><img src="/assets/images/logo.svg" alt=""></div>
+      <div class="logo"><img src="assets/images/logo.svg" alt=""></div>
       <div class="nav-btns">
         <a href="#" class="nav-link">Home</a>
         <a href="#" class="nav-link">New</a>
@@ -33,41 +26,53 @@
     </div>
     <div class="side">
       <h1>New</h1>
+      <div class="article">
+        <h2>Hydrogen VS Electric Cars</h2>
+        <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+      </div>
+      <div class="article">
+        <h2>The Downsides of AI Artistry</h2>
+        <p>What are the possible adverse effects of on-demand AI image generation?</p>
+      </div>
+      <div class="article">
+        <h2>Is VC Funding Drying Up?</h2>
+        <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+      </div>
+    </div>
+    <div class="h">
+      <h1>The Bright Future of <br> Web 3.0?</h1>
+    </div>
+    <div class="desc">
+      <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
+        But is it really fulfilling its promise?</p>
+      <button class="readmorebtn">Read more</button>
     </div>
   </main>
-  The Bright Future of Web 3.0?
-
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-  But is it really fulfilling its promise?
-
-  Read more
-
-  New 
-
-  Hydrogen VS Electric Cars
-  Will hydrogen-fueled cars ever catch up to EVs?
-
-  The Downsides of AI Artistry
-  What are the possible adverse effects of on-demand AI image generation?
-
-  Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
-
-  01
-  Reviving Retro PCs
-  What happens when old PCs are given modern upgrades?
-
-  02
-  Top 10 Laptops of 2022
-  Our best picks for various needs and budgets.
-
-  03
-  The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Karimin</a>.
+  <div class="foot">
+    <card>
+      <img src="assets/images/image-retro-pcs.jpg" alt="retro PCs">
+      <div class="cardtxt">
+        <h1>01</h1> 
+        <h2>Reviving Retro PCs</h2>
+        <p>What happens when old PCs are given modern upgrades?</p>
+      </div>
+    </card>
+    <card>
+      <img src="assets/images/image-top-laptops.jpg" alt="Top Laptops">
+      <div class="cardtxt">
+        <h1>02</h1>
+        <h2>Top 10 Laptops of 2022</h2>
+        <p>Our best picks for various needs and budgets.</p>
+      </div>
+    </card>
+    <card>
+      <img src="assets/images/image-gaming-growth.jpg" alt="Gaming Growth">
+      <div class="cardtxt">
+        <h1>03</h1>
+        <h2>The Growth of Gaming</h2>
+        <p>How the pandemic has sparked fresh opportunities.</p>
+      </div>
+    </card>
   </div>
 </body>
 </html>
