--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <nav>
       <div class="logo"><img src="assets/images/logo.svg" alt=""></div>
       <div class="nav-btns">
+        <div class="navimg">
+          <img src="assets/images/icon-menu-close.svg" alt="" srcset="">
+        </div>
         <a href="#" class="nav-link">Home</a>
         <a href="#" class="nav-link">New</a>
         <a href="#" class="nav-link">Popular</a>
@@ -21,8 +24,18 @@
     </nav>
   </header>
   <main>
-    <div class="web-img">
-
+    <picture>
+      <source media="(max-width:650px)" srcset="assets/images/image-web-3-mobile.jpg">
+      <img src="assets/images/image-web-3-desktop.jpg" class="web-img">
+    </picture>
+    
+    <div class="h">
+      <h1>The Bright Future of <br> Web 3.0?</h1>
+    </div>
+    <div class="desc">
+      <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
+        But is it really fulfilling its promise?</p>
+      <button class="readmorebtn">Read more</button>
     </div>
     <div class="side">
       <h1>New</h1>
@@ -38,15 +51,7 @@
         <h2>Is VC Funding Drying Up?</h2>
         <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
       </div>
-    </div>
-    <div class="h">
-      <h1>The Bright Future of <br> Web 3.0?</h1>
-    </div>
-    <div class="desc">
-      <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-        But is it really fulfilling its promise?</p>
-      <button class="readmorebtn">Read more</button>
-    </div>
+      </div>
   </main>
   <div class="foot">
     <card>
